fix drawer repainting on mobile adress bar hiding

--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,11 @@
 @media screen {
   .hy-drawer-scrim {
-    display: block;
     position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    opacity: 0;
+    height: 100vh;
+    widht: 100vw;
     z-index: 2;
+    opacity: 0;
     pointer-events: none;
     background: rgba(0, 0, 0, 0.5);
     transform: translateX(0);
@@ -16,16 +14,16 @@
 
   .hy-drawer-content {
     position: fixed;
-    bottom: 0;
     top: 0;
+    height: 100vh;
     z-index: 3;
     overflow-x: hidden;
     overflow-y: auto;
+    transform: translateX(0);
     contain: strict;
     width: 300px;
     background: #e8e8e8;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
-    transform: translateX(0);
     -webkit-overflow-scrolling: touch;
   }
 
